DTLS and RELOAD enhancements and bug fixes
This issue was migrated from bug 5863 in our old bug tracker.
Original bug information:
Reporter: Michael Chen
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: Windows XP
Platform: Other
Version: 1.5.x (Experimental)
Attachments:
dtls-reload-changes.zip: Source code changes and diff against rev 36461
reload-ring-of-two-rsa-null.pcap: Reload/DTLS traffics with RSA-NULL cipher should be displayed without privatekey
Bug-5863-svn-diff.txt: Source code diff against rev 36461
Bug-5863-svn-diff2.txt: Source code diff against rev 37381 - enhancement #4
Bug-5863-svn-diff3.txt: Source code diff3 - enhancement #4
bug5863_1.patch: An improved patch based on Michael's.
bug5863_2.patch: Another improved patch to better deal with IP fragmentation.