From Michael Chen via https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=5863 :

5. A guaranteed null pointer access violation is fixed in packet-ssl-utils.c
when DTLS succeeded in dissecting its payload.

svn path=/trunk/; revision=37058